--- a/website/index.html
+++ b/website/index.html
@@ -1,46 +1,55 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>美しいコードの原則 — 意図を伝える設計と実践</title>
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/prism.css">
+<html>
+<head lang="ja">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="美しいコードの原則 — 意図を伝える設計と実践">
+<title>美しいコードの原則 — 意図を伝える設計と実践</title>
+<!-- Custom CSS -->
+<link rel="stylesheet" href="css/style.css">
+<!-- <link rel="stylesheet" href="css/prism.css"> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Navigation -->
-        <nav class="sidebar" id="sidebar">
-            <!-- Header -->
-            <header class="header">
-                <h1><a href="#" onclick="loadPage('目次')">美しいコードの原則</a></h1>
-                <p class="subtitle">意図を伝える設計と実践 ～AI時代だからこそ～</p>
-            </header>
-            <div class="nav-header">
-                <h3>目次</h3>
-                <button id="toggleSidebar" class="toggle-btn">≡</button>
-            </div>
-            <div class="nav-content" id="navContent">
-                <!-- Navigation will be populated by JavaScript -->
-            </div>
-        </nav>
+    <div id="content"></div>
 
-        <!-- Main content -->
-        <main class="main-content" id="mainContent">
-            <div class="loading" id="loading">読み込み中...</div>
-            <div class="content" id="content">
-                <!-- Content will be loaded here -->
-            </div>
-        </main>
-    </div>
-
-    <!-- Scripts -->
-    <!-- Embedded content -->
-    <script src="js/content.js"></script>
-    <!-- Custom markdown parser and app -->
-    <script src="js/markdown-parser.js"></script>
-    <script src="js/app.js"></script>
+    <!-- Include the necessary libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/turndown/dist/turndown.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- MathJax for math rendering -->
+    <script>
+        window.MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']]
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+            }
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script type="module">
+        try {
+            const mermaid = await import('https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs');
+            const config = { startOnLoad: true }
+            mermaid.default.initialize(config);
+            window.mermaid = mermaid.default;
+        } catch (e) {
+            console.log('Mermaid not available:', e);
+            // Fallback: create a mock mermaid object
+            window.mermaid = {
+                init: () => console.log('Mermaid init called (mock)'),
+                initialize: () => console.log('Mermaid initialize called (mock)')
+            };
+        }
+    </script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/mermaid@11.10.1/dist/mermaid.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="js/markDownRenderer.js"></script>
+    <script>
+        initializeMarkDownRenderer()
+    </script>
+<script src="js/app.js"></script>
 </body>
 </html>
