--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <link rel="stylesheet" href="css/prism.css"> -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
 </head>
 <body>
     <div class="container">
