--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="css/style.css">
 <!-- <link rel="stylesheet" href="css/prism.css"> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
