表紙とメタデータを更新し、書籍タイトルを「AI時代の美しいプログラムの教科書」に変更しました。内容の一貫性を持たせるための修正です。

--- a/website/index.html
+++ b/website/index.html
@@ -2,8 +2,8 @@
 <head lang="ja">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="美しいコードの原則 — 意図を伝える設計と実践">
-<title>美しいコードの原則 — 意図を伝える設計と実践</title>
+<meta name="description" content="AI時代の美しいプログラムの教科書 〜20年間Microsoft MVPとして教えてきたプログラミング〜">
+<title>AI時代の美しいプログラムの教科書 〜20年間Microsoft MVPとして教えてきたプログラミング〜</title>
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <link rel="stylesheet" href="css/prism.css"> -->
@@ -21,8 +21,8 @@
             <nav class="sidebar">
                 <!-- Header -->
                 <header class="header">
-                    <h1><a href="#" onclick="loadTableOfContents()">美しいコードの原則 — 意図を伝える設計と実践</a></h1>
-                    <div class="subtitle">～AI時代だからこそ～</div>
+                    <h1><a href="#" onclick="loadTableOfContents()">AI時代の美しいプログラムの教科書</a></h1>
+                    <div class="subtitle">〜20年間Microsoft MVPとして教えてきたプログラミング〜</div>
                 </header>
                 <div class="nav-header">
                     <h3>目次</h3>
