フッターに著作権表示とGitHubリポジトリへのリンクを追加

--- a/website/index.html
+++ b/website/index.html
@@ -48,6 +48,13 @@
                 <div class="content" id="content">
                     <!-- Content will be loaded here -->
                 </div>
+                <hr>
+                <div>
+                    <footer class="footer">
+                        <p>Copyright &copy; 2025 Fujio Kojima
+                        <a href="https://github.com/Shos.ProgrammingBestPracticesAndPrinciples">GitHub Repository</a></p>
+                    </footer>
+                </div>
             </main>
         </div>
     </div>
