GitHubリポジトリへのリンクを更新

--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,7 @@
                 <div>
                     <footer class="footer">
                         <p>Copyright &copy; 2025 Fujio Kojima
-                        <a href="https://github.com/Shos.ProgrammingBestPracticesAndPrinciples">GitHub Repository</a></p>
+                        <a href="https://github.com/Fujiwo/Shos.ProgrammingBestPracticesAndPrinciples">GitHub Repository</a></p>
                     </footer>
                 </div>
             </main>
